--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -89,4 +89,5 @@ jobs:
             --image "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA" \
             --platform "managed" \
             --allow-unauthenticated
+            --set-env-vars=[DB_CONNECTION_STRING=mongodb+srv://testuser01:xHng6S19Hha50XNp@fidelity.qlkzdg7.mongodb.net/?retryWrites=true&w=majority]
       
