--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -81,13 +81,13 @@ jobs:
             --tag "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA"
 
       # Deploy image to Cloud Run
-      - name: Deploying to Cloud Run
-        run: |-
-          gcloud run deploy "$SERVICE_NAME" \
-            --quiet \
-            --region "$RUN_REGION" \
-            --image "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA" \
-            --platform "managed" \
-            --allow-unauthenticated
-            --set-env-vars=[DB_CONNECTION_STRING=mongodb+srv://testuser01:xHng6S19Hha50XNp@fidelity.qlkzdg7.mongodb.net/?retryWrites=true&w=majority]
-      
+      - name: Deploying to CloudRun
+        id: 'deploy'
+        uses: 'google-github-actions/deploy-cloudrun@v1'
+        with:
+          service: '${{SERVICE_NAME}}'
+          image: 'gcr.io/${{PROJECT_ID}}/${{SERVICE_NAME}}:$GITHUB_SHA'
+          env_vars: |
+            DB_CONNECTION_STRING=mongodb+srv://testuser01:xHng6S19Hha50XNp@fidelity.qlkzdg7.mongodb.net/?retryWrites=true&w=majority
+            CLIENT_BASE_URL=http://localhost:3000
+
