--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -87,7 +87,7 @@ jobs:
         id: "deploy"
         uses: "google-github-actions/deploy-cloudrun@v1"
         with:
-          service: "${{ SERVICE_NAME }}"
-          image: "gcr.io/${{ PROJECT_ID }}/${{ SERVICE_NAME }}:${{ GITHUB_SHA }}"
+          service: "$SERVICE_NAME"
+          image: "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA"
 
 
