--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -88,6 +88,6 @@ jobs:
         uses: "google-github-actions/deploy-cloudrun@v1"
         with:
           service: "$SERVICE_NAME"
-          image: "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA"
+          image: "gcr.io/${{ PROJECT_ID }}/${{ SERVICE_NAME }}:${{ GITHUB_SHA }}"
 
 
