--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,8 @@
         "@babel/plugin-transform-runtime"
     ],
     "presets": [
-        "@babel/preset-env"
+        "@babel/preset-env",
+        "@babel/preset-flow",
+        "@babel/preset-typescript"
     ]
 }
